# AIQToolkit

./: CHANGELOG.md  CLAUDE.md  blast_high_isl.py  blast_sustained.py  compare_dynamo_latency.py
ci/scripts/: path_checks.py
docs/source/: index.md  release-notes.md
docs/source/developer-guide/: genetic-prompt-optimizer-spec.md
docs/source/extend/: adding-an-llm-provider.md
docs/source/quick-start/: launching-ui.md
docs/source/tutorials/: index.md
examples/dynamo_integration/complex_langgraph_benchmark/: README.md  (+3 more)
examples/dynamo_integration/linear_langgraph_benchmark/: README.md  generate_dataset.py  pyproject.toml
examples/dynamo_integration/linear_langgraph_benchmark/outputs/minimal_test/: config_effective.yml  prediction_trie.json
examples/dynamo_integration/linear_langgraph_benchmark/src/linear_langgraph_benchmark/: graph_nodes.py  graph_state.py  linear_langgraph_agent.py  prompts.py  register.py
examples/dynamo_integration/linear_langgraph_benchmark/src/linear_langgraph_benchmark/configs/: config_dynamo.yml  config_dynamo_prefix.yml  config_test_llm.yml  eval_config_full.yml  eval_config_full_baseline.yml  eval_config_minimal.yml
examples/dynamo_integration/linear_langgraph_benchmark/tests/: test_graph_construction.py  test_node_functions.py
examples/evaluation_and_profiling/incident_response_assistant/: README.md  pyproject.toml
examples/evaluation_and_profiling/incident_response_assistant/configs/: eval_config.yml  optimizer_config.yml
examples/evaluation_and_profiling/incident_response_assistant/data/: eval_dataset.json  runbooks.json
examples/evaluation_and_profiling/incident_response_assistant/src/nat_incident_response_assistant/: __init__.py  prompts.py  register.py  scoring.py
optimizer_ui/: README.md  __init__.py  example_config.yaml  requirements.txt  start.bat  start.sh
optimizer_ui/backend/: __init__.py  main.py
optimizer_ui/frontend/: app.js  index.html
(+71 files in other folders)
