[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_incident_response_assistant"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[langchain,profiling]~=1.3",
]
requires-python = ">=3.11,<3.14"
description = "Incident response agent example demonstrating NAT evaluation, profiler, and optimizer workflows"
keywords = ["ai", "incident-response", "evaluation", "profiler", "optimizer"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
